plots.out
  File "loading_checks.py", line 283
    
    ^
SyntaxError: unexpected EOF while parsing
